--- a/anpg-UI/src/app/app.component.html
+++ b/anpg-UI/src/app/app.component.html
@@ -321,9 +321,8 @@
 
   <div class="list">
       <ul>
-        <li *ngFor="let item of collection | paginate: config">{{ item }}</li>
+        <li *ngFor="let item of collection.list ">{{ item }}</li>
       </ul>
-    <pagination-controls (pageChange)="pageChange($event)" class="my-pagination"></pagination-controls>
   </div>
 
 </form>
